TypeScript/budgetty/k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budgetty-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budgetty-frontend
  template:
    metadata:
      labels:
        app: budgetty-frontend
    spec:
      containers:
      - name: frontend
        #image: gcr.io/<YOUR_PROJECT_ID>/budgetty-frontend:latest
        image: budgetty-frontend:local
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
