TypeScript/budgetty/k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budgetty-frontend
  namespace: budgetty
spec:
  selector:
    app: budgetty-frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
