TypeScript/budgetty/k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budgetty-frontend
  namespace: budgetty
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: gce
  tls:
  - hosts:
    - budgetty.example.com
    secretName: budgetty-frontend-tls
  rules:
  - host: budgetty.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: budgetty-frontend
            port:
              number: 80
